--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,18 +1,33 @@
-.shop-container{
-    display: grid;
-    grid-template-columns: 4fr 1fr;
+.shop-container {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
 }
-.products-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 45px;
-    margin: 100px 50px;
+.products-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 45px;
+  margin: 100px 50px;
 }
-.cart-container{
-    background-color: rgba(255, 153, 0, 0.3);
+.cart-container {
+  background-color: rgba(255, 153, 0, 0.3);
 }
-@media screen and (max-width:1100px) {
-    .products-container{
-        grid-template-columns: repeat(2, 1fr);
-    }
+.pagination {
+  /* margin-left: 200px; */
+  text-align: center;
+  margin-bottom: 50px;
+}
+.pagination button {
+  margin-right: 10px;
+}
+.pagination .selected {
+  background-color: goldenrod;
+  border: gold;
+  font-weight: bold;
+  padding: 8px;
+  border-radius: 5px;
+}
+@media screen and (max-width: 1100px) {
+  .products-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
